<resources>
    <string name="app_name">Keiskei Smart System</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_landing">LandingActivity</string>

    <string name="register">Register</string>
    <string name="login">Sign in</string>
    <string name="edit_profile">Edit</string>
    <string name="save_profile">Simpan</string>
    <string name="cancel_profile">Batal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="city">Kota</string>
    <string name="website">www.smartv2.lapantiga.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="buy">Beli</string>
    <string name="id_member">ID Member</string>
    <string name="handphone">Handphone</string>
    <string name="pinbb">Pin BB</string>
    <string name="website_e">Website</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="nama">Nama</string>
    <string name="bonus">Bonus</string>
    <string name="chat_help">Chatt Now</string>
    <string name="voice_box">Click for Support </string>
    <string name="title_activity_mainan">MainanActivity</string>
    <string name="title_activity_voice_box">Keiskei Support</string>

    <string name="introduction_info">Informasi Anda</string>
    <string name="next">Lanjutkan</string>
    <string name="cancel">Batal</string>
    <string name="title">Judul</string>
    <string name="question">Pertanyaan</string>
    <string name="submit">Submit</string>
    <string name="attach_file">Attach Image</string>
    <string name="title_activity_chat">Keiskei Chatt</string>
    <string name="list_transactions">Daftar Transaksi</string>
    <string name="facebook_app_id">727802654022279</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Sign Out</string>
</resources>

