<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.keiskeismartsystem.fragment.ProfileFragment">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_default_new"
            android:id="@+id/im_user"
            android:padding="10dp"
            android:layout_gravity="center"
            android:minHeight="100sp"

            android:minWidth="100sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:background="@color/keiskei_dialog_transparant2"

            android:id="@+id/tv_name"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
             android:textColor="@color/white"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/tv_email"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:background="@color/keiskei_dialog_transparant3"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/handphone"
            android:id="@+id/tv_handphone"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
             android:textColor="@color/white"
            android:background="@color/keiskei_dialog_transparant2"

            android:textSize="16sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pinbb"
            android:id="@+id/tv_pinbb"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:background="@color/keiskei_dialog_transparant3"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/website_e"
            android:id="@+id/tv_website"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:background="@color/keiskei_dialog_transparant2"

            android:paddingTop="10dp"
            android:paddingBottom="10dp"
             android:textColor="@color/white"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/instagram"
            android:background="@color/keiskei_dialog_transparant3"

            android:id="@+id/tv_instagram"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:id="@+id/tv_facebook"
            android:layout_weight="1"
            android:background="@color/keiskei_dialog_transparant2"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
             android:textColor="@color/white"
            android:textSize="16sp"
            />

        <Button
            android:layout_width="120px"
            android:layout_height="120px"
            android:background="@drawable/lingkaran"
            android:text="@string/edit_profile"
            android:onClick="editprofile"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical|right"
            android:layout_marginTop="5sp" />
    </LinearLayout>
</FrameLayout>
