<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.keiskeismartsystem.fragment.EditProfilFragment">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:padding="20dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_default_new"
            android:id="@+id/im_user"
            android:padding="10dp"
            android:layout_gravity="center"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_rounded"
                    android:hint="@string/nama"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp"
                    android:id="@+id/et_nama"
                    android:nextFocusForward="@+id/et_email"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_rounded"
                    android:hint="@string/email"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp"
                    android:id="@+id/et_email"
                    android:nextFocusForward="@+id/et_handphone"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_rounded"
                    android:hint="@string/handphone"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp"
                    android:id="@+id/et_handphone"
                    android:nextFocusForward="@+id/et_pinbb"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_rounded"
                    android:hint="@string/pinbb"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp"
                    android:id="@+id/et_pinbb"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/et_website"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_rounded"
                    android:hint="@string/website_e"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp"
                    android:id="@+id/et_website"
                    android:nextFocusForward="@+id/et_instagram"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_rounded"
                    android:hint="@string/instagram"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp"
                    android:id="@+id/et_instagram"
                    android:nextFocusForward="@+id/et_facebook"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_rounded"
                    android:hint="@string/facebook"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp"
                    android:id="@+id/et_facebook"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    />
            </LinearLayout>

        </ScrollView>

        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_yellow"
            android:text="@string/save_profile"
            android:onClick="save"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center"
            android:id="@+id/bt_save"
            />
        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:text="@string/cancel_profile"
            android:onClick="save"
            android:textColor="@color/white"

            android:layout_margin="10dp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center"
            android:id="@+id/bt_back"
            />
    </LinearLayout>

</FrameLayout>
