<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/keiskei_green"
        android:textColor="#FFF"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/introduction_info" />
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:nextFocusForward="@+id/et_email"
        android:hint="@string/nama" />
    <EditText
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:nextFocusForward="@+id/et_handphone"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/et_handphone"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="Handphone (optional)"/>
</LinearLayout>